update inside bar features

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,21 @@ pyarrow
 seaborn
 pysr==1.5.5
 hmmlearn
+catboost
+clickhouse_connect
+pandas 
+redis
+schedule
+python-dotenv
+sqlalchemy
+numpy
+h5py
+pymysql
+rqsdk
+clickhouse-connect
+websocket-client
+tushare
+kafka-python
+redis
+pathlib
+pyarrow
